node_grpc_server/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: infranauts-meetup/grpc-ingress-server-certificates
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "2"
    nginx.ingress.kubernetes.io/backend-protocol: GRPCS
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: grpc-server-ingress
  namespace: infranauts-meetup
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              serviceName: node-grpc-server
              servicePort: 30110
            path: /
  tls:
    - hosts:
        - localhost
      secretName: grpc-ingress-server-certificates
